	Rewritten: iMSCP::Dir library

CONFIGS
	Added: ADM_GROUP configuration parameter
	Added: courier-authdaemon init script - Init script provided by Debian/Ubuntu do not work
	Added: mysql.data configuration file
	Added: percona 5.5/5.6 in Debian Jessie package file
	Added: percona 5.5/5.6 in Ubuntu Vivid Vervet package file
	Added: TIMEZONE configuration parameter
	Removed: TLS cipher suite - Setting TLSProtocol TLSv1 is sufficient to protect against poodle attack (ProFTPD)
	Removed: PHP_TIMEZONE parameter (replaced by global TIMEZONE parameter)

CONTRIB
	Added: Script which allow to test services for poodle vulnerability (poodle.sh)

FRONTEND
	Fixed: Domain limit is not updated when a domain is being deleted (reseller level)
	Fixed: Opcode cache must be cleared when the languages index is rebuilt

INSTALLER
	Added: Progress info for i-MSCP composer packages (Setup dialog)
	Added: timezone item for the reconfigure command line option (Allow to setup global timezone)
	Fixed: Invalid version format (non-numeric data) when updating from an RC release

YOUTRACK
	Fixed: #IP-0792: Allow customers to see real-time http access and error logs
	Fixed: #IP-1362: Incorrect PHP temporary directory path in subdomain's vhost files - Apache2 ITK server impl.
	Fixed: #IP-1363: Unable to suspend customer account
	Fixed: #IP-1364: Custom DNS records are lost when editing domain properties
	Fixed: #IP-1371: Bug - When removing domain alias, the vhost link in /etc/apache2/sites-enabled is not removed
	Fixed: #IP-1373: Compliance with RFC 2142 - Add a hostmaster address by default
	Fixed: #IP-1374: Allows reuse of same SQL username for i-MSCP managed services such as phpmyadmin, proftpd...

------------------------------------------------------------------------------------------------------------------------
1.2.8
------------------------------------------------------------------------------------------------------------------------

2015-06-20: Laurent Declercq
	RELEASE i-MSCP 1.2.8
