@@ -5,6 +5,8 @@ start on runlevel [2345]
 stop on runlevel [016]
 
 expect daemon
+
 respawn
+respawn limit 2 5
 
 exec /var/www/imscp/daemon/imscp_daemon
